<resources>
    <string name="app_name">FakeDefender</string>
    <string name="app_browser_name">通用浏览器</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_monitor">监测</string>
    <string name="menu_tools">工具</string>
    <string name="menu_upload">上传检测</string>

    <string name="menu_notifications">通知</string>
    <string name="menu_issues">问题</string>
    <string name="menu_starred">收藏</string>
    <string name="menu_search">搜索</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>

    <string name="about_copyright">© %1$s xuexiangjys All rights reserved.</string>
    <string name="about_item_homepage">访问官网</string>
    <string name="about_item_author_github">联系作者</string>
    <string name="about_item_donation_link">捐赠作者</string>
    <string name="about_item_add_qq_group">QQ交流群</string>
    <string name="url_project_github">https://github.com/xuexiangjys/TemplateAppProject</string>
    <string name="url_author_github">https://gitee.com/xuexiangjys/xuexiangjys</string>
    <string name="url_donation_link">https://gitee.com/xuexiangjys/Resource/blob/master/doc/sponsor.md</string>
    <string name="url_add_qq_group">http://qm.qq.com/cgi-bin/qm/qr?k=tiP-E6rDf0y77PRNfp2lNVcc9RsglPCM</string>

    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>

    <!-- 隐私政策弹窗   -->
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。如果你不同意该政策，很遗憾我们将无法为你提供服务</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>

    <!-- 登录   -->
    <string name="login_success">登陆成功！</string>
    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="sub_title_login">AI 换脸智能检测系统</string>>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="tip_please_input_email">请输入电子邮箱</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_email">电子邮箱</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="tip_email_error">无效的电子邮箱！</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="regex_email">^[A-Za-z0-9-_\u4e00-\u9fa5\.]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="lab_logout_confirm">是否确认退出账号？</string>
    <string name="title_user_protocol">用户协议</string>
    <string name="title_privacy_protocol">隐私政策</string>
    <string name="agree_protocol">我已阅读并同意</string>
    <string name="lab_and">和</string>

    <string name="title_jump_login">跳过</string>
    <string name="label_previous">上一条</string>
    <string name="label_next">下一条</string>
    <string name="tip_ignore_message">以后不再提示此类信息</string>
    <string name="tip_title">你知道吗？</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 监测 -->
    <string name="monitor_main">设备监测</string>
    <string name="monitor_record">检测记录</string>
    <string name="monitor_status">监测状态</string>
    <string name="monitor_record_entry">[风险值: %d] %s</string>
    <string name="monitor_record_amount">当前有 %d 条检测记录</string>

    <!-- 监测状态 -->
    <string name="alarm_threshold">告警阈值</string>
    <string name="status_latest_100_scores">风险值变化状态</string>
    <string name="status_latest_ten_records">最近 10 条监测记录</string>
    <string name="status_risk_levels">风险等级变化状态</string>

    <!-- 设置 -->
    <string name="general_settings">通用设置</string>
    <string name="alarm_settings">告警设置</string>
    <string name="scene_settings">风险分级</string>
    <string name="please_select_risk_level">选择风险等级</string>
    <string name="tip_filter_apps">请输入APP名称进行过滤</string>

    <string name="please_select_image">请选择需要检测的图片</string>
    <string name="face_detection_failure">识别人脸失败</string>
    <string name="save_image">保存至相册</string>
    <string name="save_setting">保存设置</string>
    <string name="please_select">请选择</string>
    <string name="save_image_success">已保存至相册</string>
    <string name="tip">提示</string>
    <string name="wait_for_check_result">图片检测中，请稍后</string>
    <string name="start_monitor">开始监测</string>
    <string name="stop_monitor">停止监测</string>
    <string name="risk_score">风险</string>

    <string name="http_request_error">网络请求错误：</string>
    <string name="double_zero">00</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="running_time">已保护您的设备 %d 天</string>
    <string name="last_running_time">上一次监测 %s</string>
    <string name="not_run_yet">还没有监测过哦</string>

    <!-- risk level -->
    <string name="extreme_high_risk">极高风险</string>
    <string name="high_risk">高风险</string>
    <!--<string name="medium_high_risk">中高风险</string>-->
    <string name="medium_risk">中风险</string>
    <string name="low_risk">低风险</string>
    <string name="no_risk">无风险</string>

    <string name="notification_title">FakeDefender</string>
    <string name="notification_text">FakeDefender 全流程监测与告警系统运行中</string>

    <string name="notification_alarm_title">FakeDefender 告警系统</string>
    <string name="notification_alarm_text">检测到伪造人脸环境，请及时处理</string>

    <string name="keyword_detector_alarm_title">FakeDefender 监测系统</string>
    <string name="keyword_detector_alarm_text">开启场景分析模块</string>

    <string name="sensitive_keyword_alarm_title">FakeDefender 监测系统</string>
    <string name="sensitive_keyword_alarm_text">检测到敏感词汇：“%s”，将风险等级设置为极高</string>

    <!-- General Settings -->
    <string name="account_settings">账号设置</string>
    <string name="restore_default_settings">恢复默认设置</string>
    <string name="restore_default_settings_completed">已恢复默认设置</string>
    <string name="logout">退出账号（当前账号：%s）</string>
    <string name="info_logout">已退出账号</string>
    <string name="auxiliary_settings">语音辅助检测设置</string>
    <string name="enable_auxiliary_detection">启用语音辅助检测</string>
    <!-- 图像质量设置 -->
    <string name="image_quality_settings">图像质量设置</string>
    <string name="set_image_quality">更改图像质量（当前图像质量：%s）</string>
    <string name="set_image_quality_desc">图像质量越高，检测准确度越高，同时会导致使用的流量增加，建议在非 Wi-Fi 环境下使用低质量</string>
    <string name="high_image_quality">高质量</string>
    <string name="moderate_image_quality">中等质量</string>
    <string name="low_image_quality">低质量</string>
    <string name="select_image_quality">选择图像质量</string>

    <!-- Alarm Settings -->
    <string name="alarm_threshold_settings">告警阈值设置</string>
    <string name="set_alarm_threshold">更改告警阈值（当前告警阈值：%d）</string>
    <string name="please_select_threshold">选择告警阈值</string>
    <string name="high_alarm_threshold">高阈值：90</string>
    <string name="medium_alarm_threshold">中阈值：80</string>
    <string name="low_alarm_threshold">低阈值：70</string>
    <string name="set_detection_frequency">更改检测频率（当前监测频率：%s）</string>
    <string name="please_select_frequency">选择检测频率</string>
    <string name="detection_frequency_settings">检测频率设置</string>
    <string name="high_detection_frequency">高频率</string>
    <string name="medium_detection_frequency">中频率</string>
    <string name="low_detection_frequency">低频率</string>
    <string name="extreme_high_risk_frequency">极高风险：%d 毫秒/次</string>
    <string name="high_risk_frequency">高风险：%d 毫秒/次</string>
    <!--<string name="medium_high_risk">中高风险</string>-->
    <string name="medium_risk_frequency">中风险：%d 毫秒/次</string>
    <string name="low_risk_frequency">低风险：%d 毫秒/次</string>
    <string name="no_risk_frequency">无风险：%d 毫秒/次</string>
    <string name="bound_email">绑定邮箱：%s</string>
    <string name="bound_phone_number">绑定手机号：%s</string>

    <string name="alarm_method_settings">告警方式设置</string>
    <string name="enable_pop_window_alarm">弹窗告警</string>
    <string name="enable_email_alarm">邮件告警</string>
    <string name="enable_message_alarm">短信告警</string>
    <string name="advanced_settings">高级设置</string>

    <!-- Advanced Settings -->
    <string name="set_filter_strategy">设置模糊人脸过滤策略（当前策略：%s）</string>
    <string name="select_filter_strategy">选择模糊人脸过滤策略</string>
    <string name="strict_filter_strategy">严格</string>
    <string name="moderate_filter_strategy">适中</string>
    <string name="loose_filter_strategy">宽松</string>
    <string name="description_filter_strategy">模糊人脸的检测误报率较高，因此过滤模糊人脸有利于提高检测准确度</string>
    <string name="status_allocated_memory">使用内存统计 (MB)</string>
    <string name="status_traffic">使用流量统计 (MB)</string>
    <string name="please_grant_pop_window_permission">正确给予权限才能开启弹窗告警</string>
    <string name="alarm_method_settings_desc">默认开启气泡通知告警，以上为三种可选的额外告警方式</string>
    <string name="pop_window_alarm_title">虚假人脸告警</string>
    <string name="pop_window_alarm_message">检测到风险值已达到设定告警阈值，请选择返回 APP 或忽略告警</string>
    <string name="ignore_pop_window_alarm">忽略</string>
    <string name="switch_back_to_app">返回 APP</string>

</resources>